# SeamCarving

./: .gitignore  README.md  zip.sh
src/: .pic.h.swp  CMakeLists.txt  Cut.cpp  Cut.h  SeamCarving  main.cpp  main.sh  pic.cpp  pic.h
